@@ -1,4 +1,4 @@
-/* $Cambridge: exim/exim-src/src/macros.h,v 1.22 2006/02/07 11:19:00 ph10 Exp $ */
+/* $Cambridge: exim/exim-src/src/macros.h,v 1.23 2006/02/14 14:55:37 ph10 Exp $ */
 
 /*************************************************
 *     Exim - an Internet mail transport agent    *
@@ -381,12 +381,13 @@ set all the bits in a multi-word selector. */
 #define LX_rejected_header             0x80001000
 #define LX_return_path_on_delivery     0x80002000
 #define LX_sender_on_delivery          0x80004000
-#define LX_smtp_confirmation           0x80008000
-#define LX_subject                     0x80010000
-#define LX_tls_certificate_verified    0x80020000
-#define LX_tls_cipher                  0x80040000
-#define LX_tls_peerdn                  0x80080000
-#define LX_unknown_in_list             0x80100000
+#define LX_sender_verify_fail          0x80008000
+#define LX_smtp_confirmation           0x80010000
+#define LX_subject                     0x80020000
+#define LX_tls_certificate_verified    0x80040000
+#define LX_tls_cipher                  0x80080000
+#define LX_tls_peerdn                  0x80100000
+#define LX_unknown_in_list             0x80200000
 
 #define L_default     (L_connection_reject        | \
                        L_delay_delivery           | \
@@ -401,6 +402,7 @@ set all the bits in a multi-word selector. */
 
 #define LX_default   ((LX_acl_warn_skipped        | \
                        LX_rejected_header         | \
+                       LX_sender_verify_fail      | \
                        LX_tls_cipher) & 0x7fffffff)
 
 /* Private error numbers for delivery failures, set negative so as not
